--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,53 +1,16 @@
+
 .container{
-    width: 80%;
-    height: 100vh;
+    max-width: 800px;
     margin: auto;
-    }
-body{
-    background-color: burlywood;
-
+    margin-top: 100px;
 }
-.form{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: rgb(109, 109, 92);
-    padding: 1%;
-    border-radius: 1%;
 
+.todo-list{
+    .ant-card{
+     margin-top: 20px;
+    }
+    
+}
+.list{
     margin-top: 5%;
-    input{
-        flex: 2;
-        input:focus{
-            outline: black;
-        }
-    }
-    button{
-        flex: 1;
-        }
-        button:hover{
-        background-color: black;
-        color: blanchedalmond;
-    }
-}
-.list-item{
-    background-color: rgb(185, 185, 154);
-    padding: 1%;
-    margin-top: 2%;
-    border-radius: 1%;
-    &:hover{
-        background-color: rgb(235, 204, 158);
-    }
-    display: flex;
-    p{
-        flex: 2;
-       
-    }
-    button{
-        flex: 1;
-        &:hover{
-            background-color: black;
-            color: blanchedalmond;
-        }
-    }
 }
